--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.29"
+    "vue": "^3.4.29",
+    "axios": "^0.21.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
