--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "vue": "^3.4.29",
-    "axios": "^0.21.1"
+    "vue-router": "^4.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
