--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "@popperjs/core": "^2.11.8",
     "axios": "^0.21.1",
+    "bootstrap": "^5.3.3",
     "vue": "^3.4.29",
     "vue-router": "^4.0.0"
   },
