--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,43 @@
 spring.application.name=backend
+app.secret-key=9fdfdc8392f4619e
+
+# ===============================
+# = DataSource
+# ===============================
+
+# Set here configurations for the database connection
+spring.datasource.url = jdbc:mysql://127.0.0.1:3306/mynote?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+
+# Username and password
+spring.datasource.username = root
+spring.datasource.password = password
+
+# Keep the connection alive if idle for a long time (needed in production)
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
+
+# ===============================
+# = JPA / HIBERNATE
+# ===============================
+
+# Show or not log for each sql query
+spring.jpa.show-sql = true
+# Improves the readability of SQL statements.
+spring.jpa.properties.hibernate.format_sql=true
+
+# Hibernate ddl auto (create, create-drop, update): with "update" the database
+# schema will be automatically updated accordingly to java entity found in the project
+spring.jpa.hibernate.ddl-auto = update
+
+# Naming strategy
+# Changes camel case to underscore version when using ImprovedNamingStrategy.
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+
+# UTF-8
+server.servlet.encoding.charset = UTF-8
+server.servlet.encoding.force = true
+
+server.port  = 8080
