--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@popperjs/core": "^2.11.8",
     "axios": "^0.21.1",
     "bootstrap": "^5.3.3",
+    "crypto-js": "^4.2.0",
     "vue": "^3.4.29",
     "vue-router": "^4.0.0"
   },
